# makic-compiler

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.MD
docs/: CODE.md  ideas.txt  makic.txt
lib/: cmdlib.cpp  cmdlib.h
src/: builder.c  builder.cpp  builder.h  cmd.cpp  cmd.h  cmdlib.cpp  common.h  console.c  console.cpp  console.h  lexer.cpp  main.cpp  makic.c  makic.cpp  makic.h  makivm.c  progdefs.h  shell.cpp  shell.h  util.cpp  util.h
